# PeopleCounterV2

./: .gitignore  CMakeLists.txt  fearuresComparison.cpp  main.cpp  modelComparison.cpp  modelComparison.py
common/: Constants.cpp  Constants.hpp
peopleDetector/: Detection.hpp  PeopleDetector.cpp  PeopleDetector.hpp
peopleReId/: common.cpp  common.hpp  fast-reid.cpp  fast-reid.hpp  feature.cpp  feature.hpp  model.cpp  model.hpp
peopleReId/config/: config.yaml
peopleReId/depends/yaml-cpp/libs/: libyaml-cpp.so.0.6
peopleTracker/: MultipleObjectTracker.cpp  MultipleObjectTracker.hpp  ObjectTracker.cpp  ObjectTracker.hpp
